# badminton-gamegen

./: .editorconfig  .eslintrc.cjs  .git-branches.toml  .gitignore  Cargo.toml  README.md  build.rs  bun.lockb  index.html  package.json  tsconfig.json
.github/workflows/: main.yml  test.yml
app/: .eslintrc.cjs  drizzle.config.ts  package.json  tsconfig.json
app/.vercel/: project.json
app/db/: db.ts  schema.ts
app/drizzle/: 0000_volatile_lorna_dane.sql  0001_fantastic_bruce_banner.sql  0002_giant_diamondback.sql  0003_easy_giant_man.sql  0004_demonic_lady_ursula.sql
app/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  _journal.json
app/scripts/: recalculateRanks.ts  removeMatch.ts
app/src/: sessionAtoms.ts
app/src/app/: layout.tsx  page.tsx
app/src/app/api/generate/: route.ts
app/src/app/api/leaderboard/[id]/: route.ts
app/src/app/api/leaderboard/[id]/matches/: route.ts
app/src/app/generate/: page.tsx
app/src/app/leaderboard/: leaderboard.ts
app/src/app/leaderboard/[id]/: page.tsx
app/src/app/leaderboard/[id]/match/[matchId]/: page.tsx
app/src/app/leaderboard/create/: actions.ts  page.tsx
app/src/components/: AppShell.tsx  SubmitButton.tsx
app/src/components/generate/: Configuration.tsx  PlayerList.tsx
apps/webapp/: package.json
apps/webapp/src/: sessionAtoms.ts
apps/webapp/src/app/generate/: page.tsx
apps/webapp/src/components/generate/: Configuration.tsx  PlayerList.tsx
examples/: balance.rs
src/: lib.rs  main.rs
(+4 files in other folders)
