[package]
name = "badminton-gamegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
rand = "0.8.5"
yew = { version = "0.21.0", features = ["csr"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
