[package]
name = "badminton-gamegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
gloo-storage = "0.3.0"
itertools = "0.12.1"
rand = "0.8.5"
sycamore = "0.9.0-beta.2"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["KeyboardEvent", "Clipboard", "Window", "Navigator", "Permissions"] }

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 'z'
# Enable link time optimization.
lto = true
